Fix nav collapse z-index

--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -36,6 +36,9 @@ body {
 // App Structure
 #navbar {
   height: 51px;
+  opacity: 0.9;
+  z-index: 1000;
+  position: relative;
 }
 
 .navbar {
@@ -60,8 +63,10 @@ body {
 #content {
   //margin-top: 50px;
   margin-bottom: -42px;
+  //z-index: 1;
   .container {
-    //min-height: 100%;
+    position: relative;
+    z-index: 1;
   }
 }
 
@@ -69,6 +74,7 @@ body {
   position: fixed;
   height: 42px;
   bottom: 0px;
+  z-index: 100;
 }
 
 .footer {
@@ -76,7 +82,7 @@ body {
   //bottom: 0px;
   width: 100%;
   //height: 42px;
-  z-index: 1;
+  z-index: 100;
   background-color: #f5f5f5;
 }
 
